--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
         "@babel/plugin-syntax-dynamic-import",
         "@babel/plugin-transform-async-to-generator",
         "@babel/plugin-proposal-object-rest-spread",
+        "@babel/plugin-proposal-class-properties",
         ["react-intl", {
             "messagesDir": "./translations/messages/"
         }]],
